--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,13 @@
 		"rootDir": "."
 	},
 	"exclude": [
-		"example"
+		"./csslint",
+		"./dist",
+		"./eslint-config",
+		"./eslint-config-ts",
+		"./example",
+		"./htmlvalidate",
+		"./ssg"
 	],
 	"extends": [
 		"@robertakarobin/eslint-config-ts"
