--- a/ssg/package.json
+++ b/ssg/package.json
@@ -1,6 +1,7 @@
 {
 	"dependencies": {
-		"@robertakarobin/jsutil": "file:../jsutil",
+		"@robertakarobin/eslint-config-ts": "file:../eslint-config-ts",
+		"@robertakarobin/util": "file:../",
 		"esbuild": "^0.19.8",
 		"glob": "^10.3.10",
 		"js-beautify": "^1.14.11",
@@ -11,11 +12,8 @@
 		"@types/js-beautify": "^1.14.3",
 		"@types/jsdom": "^21.1.6"
 	},
-	"main": "./dist/index.js",
 	"name": "@robertakarobin/ssg",
-	"scripts": {
-		"test": "tsx ./example/spec/run.ts"
-	},
+	"scripts": {},
 	"type": "module",
 	"version": "0.0.28"
 }
