--- a/example/package.json
+++ b/example/package.json
@@ -1,11 +1,11 @@
 {
 	"dependencies": {
-		"@robertakarobin/ssg": "file:../ssg/",
-		"@robertakarobin/util": "file:../"
+		"@robertakarobin/ssg": "^0.0.39",
+		"@robertakarobin/util": "^0.0.194"
 	},
 	"devDependencies": {
 		"@robertakarobin/csslint": "^0.0.8",
-		"@robertakarobin/eslint-config-ts": "^0.0.17",
+		"@robertakarobin/eslint-config-ts": "^0.0.21",
 		"@robertakarobin/htmlvalidate": "^0.0.3"
 	},
 	"scripts": {
