--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
 		"baseUrl": ".",
+		"noEmit": true,
 		"noEmitOnError": true,
 		"paths": {
 			"@src/*": ["tmp/*", "src/*"]
