--- a/ssg/package.json
+++ b/ssg/package.json
@@ -1,19 +1,17 @@
 {
 	"dependencies": {
-		"@robertakarobin/eslint-config-ts": "file:../eslint-config-ts",
-		"@robertakarobin/util": "file:../",
+		"@robertakarobin/eslint-config-ts": "^0.0.21",
+		"@robertakarobin/util": "^0.0.194",
+		"@types/js-beautify": "^1.14.3",
+		"@types/jsdom": "^21.1.6",
 		"esbuild": "^0.19.8",
 		"glob": "^10.3.10",
 		"js-beautify": "^1.14.11",
 		"jsdom": "^23.0.1",
 		"marked": "^11.0.0"
 	},
-	"devDependencies": {
-		"@types/js-beautify": "^1.14.3",
-		"@types/jsdom": "^21.1.6"
-	},
 	"name": "@robertakarobin/ssg",
 	"scripts": {},
 	"type": "module",
-	"version": "0.0.32"
+	"version": "0.0.39"
 }
