--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"baseUrl": ".",
-		"composite": true,
+		"lib": ["DOM", "DOM.Iterable", "ESNext"],
 		"outDir": "dist",
 		"paths": {
 			"@util/*": ["./*"]
