--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,6 @@
 {
 	"dependencies": {
-		"@robertakarobin/eslint-config-ts": "^0.0.21",
-		"@robertakarobin/util": "^0.0.194",
+		"@robertakarobin/util": "^0.0.195",
 		"@types/js-beautify": "^1.14.3",
 		"@types/jsdom": "^21.1.6",
 		"esbuild": "^0.19.8",
@@ -10,8 +9,11 @@
 		"jsdom": "^23.0.1",
 		"marked": "^11.0.0"
 	},
-	"name": "@robertakarobin/ssg",
+	"devDependencies": {
+		"@robertakarobin/eslint-config-ts": "^0.0.21"
+	},
+	"name": "@robertakarobin/web",
 	"scripts": {},
 	"type": "module",
-	"version": "0.0.39"
+	"version": "0.0.40"
 }
