--- a/example/.stylelintrc.json
+++ b/example/.stylelintrc.json
@@ -1,8 +1,3 @@
 {
-	"extends": "@robertakarobin/csslint",
-	"rules": {
-		"custom-property-empty-line-before": null,
-		"custom-property-pattern": null,
-		"declaration-empty-line-before": null
-	}
+	"extends": "@robertakarobin/csslint"
 }
