--- a/example/package.json
+++ b/example/package.json
@@ -1,11 +1,11 @@
 {
 	"dependencies": {
-		"@robertakarobin/util": "file:../",
-		"@robertakarobin/web": "file:../web"
+		"@robertakarobin/util": "^0.0.246",
+		"@robertakarobin/web": "^0.0.91"
 	},
 	"devDependencies": {
 		"@robertakarobin/csslint": "^0.0.13",
-		"@robertakarobin/eslint-config-ts": "file:../eslint-config-ts",
+		"@robertakarobin/eslint-config-ts": "^0.0.31",
 		"@robertakarobin/htmlvalidate": "^0.0.4"
 	},
 	"scripts": {
