--- a/example/package.json
+++ b/example/package.json
@@ -6,7 +6,9 @@
 	"devDependencies": {
 		"@robertakarobin/csslint": "^0.0.13",
 		"@robertakarobin/eslint-config-ts": "^0.0.31",
-		"@robertakarobin/htmlvalidate": "^0.0.4"
+		"@robertakarobin/htmlvalidate": "^0.0.4",
+		"@robertakarobin/util": "file:../",
+		"@robertakarobin/web": "file:../web"
 	},
 	"scripts": {
 		"build": "tsx build.ts",
