--- a/example/package.json
+++ b/example/package.json
@@ -1,14 +1,13 @@
 {
 	"dependencies": {
-		"@robertakarobin/util": "^0.0.250",
-		"@robertakarobin/web": "^0.0.97"
+		"@robertakarobin/util": "^0.0.258",
+		"@robertakarobin/web": "^0.0.105"
 	},
 	"devDependencies": {
 		"@robertakarobin/csslint": "^0.0.13",
 		"@robertakarobin/eslint-config-ts": "^0.0.34",
 		"@robertakarobin/htmlvalidate": "^0.0.4",
-		"@robertakarobin/util": "file:../",
-		"@robertakarobin/web": "file:../web"
+		"diff": "^5.1.0"
 	},
 	"scripts": {
 		"build": "tsx build.ts",
