--- a/example/package.json
+++ b/example/package.json
@@ -1,12 +1,12 @@
 {
 	"dependencies": {
-		"@robertakarobin/util": "^0.0.258",
-		"@robertakarobin/web": "^0.0.105"
+		"@robertakarobin/util": "file:../",
+		"@robertakarobin/web": "file:../web"
 	},
 	"devDependencies": {
-		"@robertakarobin/csslint": "^0.0.13",
-		"@robertakarobin/eslint-config-ts": "^0.0.34",
-		"@robertakarobin/htmlvalidate": "^0.0.4",
+		"@robertakarobin/csslint": "file:../csslint",
+		"@robertakarobin/eslint-config-ts": "file:../eslint-config-ts",
+		"@robertakarobin/htmlvalidate": "file:../htmlvalidate",
 		"diff": "^5.1.0"
 	},
 	"scripts": {
