--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"devDependencies": {
 		"@robertakarobin/csslint": "file:./csslint",
 		"@robertakarobin/eslint-config-ts": "file:./eslint-config-ts",
+		"@robertakarobin/htmlvalidate": "file:./htmlvalidate",
 		"@types/diff": "^5.0.9",
 		"diff": "^5.1.0",
 		"husky": "^8.0.3",
