--- a/csslint/package.json
+++ b/csslint/package.json
@@ -1,12 +1,13 @@
 {
 	"dependencies": {
+		"@stylistic/stylelint-config": "^1.0.1",
+		"@stylistic/stylelint-plugin": "^2.0.0",
 		"postcss-html": "^1.5.0",
-		"stylelint": "^15.11.0",
-		"stylelint-config-standard": "^34.0.0",
-		"stylelint-order": "^6.0.3",
-		"stylelint-stylistic": "^0.4.3"
+		"stylelint": "^16.1.0",
+		"stylelint-config-standard": "^36.0.0",
+		"stylelint-order": "^6.0.4"
 	},
 	"main": "index.js",
 	"name": "@robertakarobin/csslint",
-	"version": "0.0.13"
+	"version": "0.0.19"
 }
