--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,14 @@
 {
 	"unwantedRecommendations": [
-		"denoland.vscode-deno"
+		"denoland.vscode-deno",
+
+		// These are ot recommended because we're not actually using lit-html, so they complain about things that conflict with lit-html directives
+		"runem.lit-plugin",
+		"bierner.lit-html"
 	],
 	"recommendations": [
 		"dbaeumer.vscode-eslint",
-		"html-validate.vscode-html-validate"
+		"html-validate.vscode-html-validate",
+		"pushqrdx.inline-html"
 	]
 }
