--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
 	"dependencies": {
-		"@robertakarobin/util": "file:../",
+		"@robertakarobin/util": "^0.0.259",
 		"@types/js-beautify": "^1.14.3",
 		"@types/jsdom": "^21.1.6",
 		"esbuild": "^0.19.11",
@@ -12,5 +12,5 @@
 	"name": "@robertakarobin/web",
 	"scripts": {},
 	"type": "module",
-	"version": "0.0.105"
+	"version": "0.0.106"
 }
