--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
 	"dependencies": {
-		"@robertakarobin/util": "^0.0.260",
+		"@robertakarobin/util": "file:../",
 		"@types/js-beautify": "^1.14.3",
 		"@types/jsdom": "^21.1.6",
 		"esbuild": "^0.19.11",
