Moving components to util since it doesnt have any dependencies

--- a/example/package.json
+++ b/example/package.json
@@ -1,7 +1,7 @@
 {
 	"dependencies": {
-		"@robertakarobin/util": "file:../",
-		"@robertakarobin/web": "file:../web"
+		"@robertakarobin/ssg": "file:../ssg",
+		"@robertakarobin/util": "file:../"
 	},
 	"devDependencies": {
 		"@robertakarobin/csslint": "file:../csslint",
