--- a/ssg/package.json
+++ b/ssg/package.json
@@ -1,6 +1,6 @@
 {
 	"dependencies": {
-		"@robertakarobin/util": "^0.0.267",
+		"@robertakarobin/util": "file:..",
 		"@types/js-beautify": "^1.14.3",
 		"@types/jsdom": "^21.1.6",
 		"esbuild": "^0.19.11",
@@ -9,8 +9,8 @@
 		"jsdom": "^23.2.0",
 		"marked": "^11.1.1"
 	},
-	"name": "@robertakarobin/web",
+	"name": "@robertakarobin/ssg",
 	"scripts": {},
 	"type": "module",
-	"version": "0.0.122"
+	"version": "0.0.2"
 }
