--- a/ssg/package.json
+++ b/ssg/package.json
@@ -1,16 +1,16 @@
 {
 	"dependencies": {
-		"@robertakarobin/util": "file:..",
+		"@robertakarobin/util": "^0.0.270",
 		"@types/js-beautify": "^1.14.3",
 		"@types/jsdom": "^21.1.6",
-		"esbuild": "^0.19.11",
+		"esbuild": "^0.20.0",
 		"glob": "^10.3.10",
 		"js-beautify": "^1.14.11",
-		"jsdom": "^23.2.0",
-		"marked": "^11.1.1"
+		"jsdom": "^24.0.0",
+		"marked": "^11.2.0"
 	},
 	"name": "@robertakarobin/ssg",
 	"scripts": {},
 	"type": "module",
-	"version": "0.0.2"
+	"version": "0.0.4"
 }
