--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
 	"compilerOptions": {
 		"baseUrl": ".",
+		"declaration": true,
+		"emitDeclarationOnly": true,
+		"noEmit": false,
 		"outDir": "dist",
 		"rootDir": "."
 	},
