--- a/eslint-config-ts/package.json
+++ b/eslint-config-ts/package.json
@@ -1,13 +1,12 @@
 {
 	"dependencies": {
-		"@robertakarobin/eslint-config": "^0.0.19",
-		"@types/node": "^20.11.10",
-		"@typescript-eslint/eslint-plugin": "^6.19.1",
-		"@typescript-eslint/parser": "^6.19.1",
-		"eslint-plugin-typescript-sort-keys": "^3.1.0"
+		"@robertakarobin/eslint-config": "^0.0.21",
+		"@types/node": "^20.11.19",
+		"@typescript-eslint/eslint-plugin": "^7.0.2",
+		"@typescript-eslint/parser": "^7.0.2"
 	},
 	"main": "index.js",
 	"name": "@robertakarobin/eslint-config-ts",
 	"scripts": {},
-	"version": "0.0.39"
+	"version": "0.0.40"
 }
