Fix npmignore ignoring spec/example

--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,9 @@
-.husky
-.vscode
-bin
-csslint
-eslint-config
-eslint-config-ts
-example
-htmlvalidate
-ssg
+/.husky
+/.vscode
+/bin
+/csslint
+/eslint-config
+/eslint-config-ts
+/example
+/htmlvalidate
+/ssg
