--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
 		"@robertakarobin/eslint-config-ts": "file:./eslint-config-ts",
 		"@robertakarobin/htmlvalidate": "file:./htmlvalidate",
 		"@types/diff": "^5.0.9",
+		"@types/js-beautify": "^1.14.3",
 		"@types/jsdom": "^21.1.6",
 		"diff": "^5.2.0",
 		"esbuild": "^0.20.2",
 		"husky": "^9.0.11",
+		"js-beautify": "^1.15.1",
 		"jsdom": "^24.0.0",
 		"npm-check-updates": "^16.14.17",
 		"tsx": "^4.7.1"
@@ -30,5 +32,5 @@
 		"test": "npm run lint && npm run spec && npm run test --prefix example"
 	},
 	"type": "module",
-	"version": "0.0.379"
+	"version": "0.0.380"
 }
