--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
 		"@robertakarobin/csslint": "file:./csslint",
 		"@robertakarobin/eslint-config-ts": "file:./eslint-config-ts",
 		"@robertakarobin/htmlvalidate": "file:./htmlvalidate",
+		"@robertakarobin/util-components-build-deps": "^0.0.1",
 		"@types/diff": "^5.0.9",
 		"@types/js-beautify": "^1.14.3",
-		"@types/jsdom": "^21.1.6",
 		"diff": "^5.2.0",
-		"esbuild": "^0.20.2",
 		"husky": "^9.0.11",
 		"js-beautify": "^1.15.1",
-		"jsdom": "^24.0.0",
 		"npm-check-updates": "^16.14.17",
 		"tsx": "^4.7.1"
 	},
@@ -32,5 +30,5 @@
 		"test": "npm run lint && npm run spec && npm run test --prefix example"
 	},
 	"type": "module",
-	"version": "0.0.381"
+	"version": "0.0.382"
 }
