--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"noEmit": false,
 		"outDir": "dist",
 		"rootDir": "util",
-		"types": ["@robertakarobin/path-data-polyfill"]
+		"types": ["path-data-polyfill"]
 	},
 	"extends": [
 		"@robertakarobin/eslint-config-ts"
