Add linting for util/ and .js paths

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,19 @@
 		"**/node_modules/*",
 		"**/tmp/*",
 		"**/package-lock.json"
-	]
+	],
+	"rules": {
+		"no-restricted-imports": ["error", {
+			"patterns": [
+				{
+					"group": ["util/*"],
+					"message": "Paths to util break when this package is imported. Use relative paths instead."
+				},
+				{
+					"group": ["*.js"],
+					"message": "Import .ts files, not .js"
+				}
+			]
+		}]
+	}
 }
