--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@types/diff": "^5.2.0",
 		"@types/js-beautify": "^1.14.3",
 		"diff": "^5.2.0",
+		"glob": "^10.3.13",
 		"husky": "^9.0.11",
 		"js-beautify": "^1.15.1",
 		"npm-check-updates": "^16.14.20",
