--- a/csslint/package.json
+++ b/csslint/package.json
@@ -2,17 +2,20 @@
 	"dependencies": {
 		"@stylistic/stylelint-config": "^1.0.1",
 		"@stylistic/stylelint-plugin": "^2.1.2",
+		"postcss": "^8.4.38",
 		"postcss-html": "^1.7.0",
 		"postcss-lit": "^1.1.1",
+		"postcss-nested": "^6.0.1",
 		"stylelint": "^16.5.0",
 		"stylelint-config-standard": "^36.0.0",
 		"stylelint-order": "^6.0.4"
 	},
+	"description": "Robin's stylelint configurations, and a `.css.ts`-to-`.css` compiler",
 	"main": "index.js",
 	"name": "@robertakarobin/csslint",
 	"scripts": {
 		"test": "stylelint ./test"
 	},
 	"type": "module",
-	"version": "0.0.27"
+	"version": "0.0.28"
 }
