--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -4,7 +4,7 @@
 		"noEmit": true,
 		"noEmitOnError": true,
 		"paths": {
-			"@src/*": ["tmp/*", "src/*"]
+			"@src/*": ["src/*"]
 		}
 	},
 	"extends": [
@@ -14,7 +14,6 @@
 		"../util/**/*.ts",
 		"build.ts",
 		"spec/**/*.ts",
-		"src/**/*.ts",
-		"tmp/**/*.ts"
+		"src/**/*.ts"
 	]
 }
