--- a/csslint/package.json
+++ b/csslint/package.json
@@ -1,7 +1,7 @@
 {
 	"bin": {
-		"cssjs": "bin/css-js.js",
-		"cssts": "bin/css-ts.ts"
+		"cssjs": "bin/cssjs.js",
+		"cssts": "bin/cssts.sh"
 	},
 	"dependencies": {
 		"@stylistic/stylelint-config": "^1.0.1",
@@ -21,5 +21,5 @@
 		"test": "stylelint ./test"
 	},
 	"type": "module",
-	"version": "0.0.31"
+	"version": "0.0.32"
 }
