Add @html-eslint w rules

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,12 +12,8 @@
 		"javascript",
 		"json",
 		"jsonc",
+		"html",
 		"typescript"
-	],
-
-	"html-validate.enable": true,
-	"html-validate.validate": [
-		"html"
 	],
 
 	"stylelint.validate": [
