--- a/eslint-config/package.json
+++ b/eslint-config/package.json
@@ -1,5 +1,7 @@
 {
 	"dependencies": {
+		"@html-eslint/eslint-plugin": "^0.24.1",
+		"@html-eslint/parser": "^0.24.1",
 		"@stylistic/eslint-plugin": "^2.1.0",
 		"eslint": "^8.57.0",
 		"eslint-plugin-import": "^2.29.1",
