rm htmlvalidate and jsbeautify; use linters for prettying

--- a/example/.eslintrc.json
+++ b/example/.eslintrc.json
@@ -4,7 +4,8 @@
 	],
 	"ignorePatterns": [
 		"!**/.*.js*",
-		"dist/**",
+		"dist/**/*.js",
+		"dist/**/*.json",
 		"dist-golden/**",
 		"node_modules/**",
 		"tmp/**"
