--- a/eslint-config-ts/package.json
+++ b/eslint-config-ts/package.json
@@ -1,9 +1,12 @@
 {
 	"dependencies": {
 		"@robertakarobin/eslint-config": "^0.0.27",
-		"@types/node": "^20.14.0",
-		"@typescript-eslint/eslint-plugin": "^7.11.0",
-		"@typescript-eslint/parser": "^7.11.0"
+		"@types/node": "^20.14.2",
+		"@typescript-eslint/eslint-plugin": "^7.12.0",
+		"@typescript-eslint/parser": "^7.12.0"
+	},
+	"devDependencies": {
+		"@robertakarobin/eslint-config": "file:../eslint-config"
 	},
 	"main": "index.js",
 	"name": "@robertakarobin/eslint-config-ts",
