--- a/eslint-config/package.json
+++ b/eslint-config/package.json
@@ -2,6 +2,7 @@
 	"dependencies": {
 		"@html-eslint/eslint-plugin": "^0.25.0",
 		"@html-eslint/parser": "^0.25.0",
+		"@robertakarobin/eslint-plugin": "file:./rules",
 		"@stylistic/eslint-plugin": "^2.2.2",
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-import-quotes": "^0.0.1"
