--- a/eslint-config/package.json
+++ b/eslint-config/package.json
@@ -1,7 +1,7 @@
 {
 	"dependencies": {
-		"@html-eslint/eslint-plugin": "^0.25.0",
-		"@html-eslint/parser": "^0.25.0",
+		"@html-eslint/eslint-plugin": "file:../../html-eslint/packages/eslint-plugin",
+		"@html-eslint/parser": "file:../../html-eslint/packages/parser",
 		"@robertakarobin/eslint-plugin": "file:./rules",
 		"@stylistic/eslint-plugin": "^2.2.2",
 		"eslint-plugin-import": "^2.29.1",
