--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"glob": "^11.0.0",
 		"husky": "^9.1.6",
 		"npm-check-updates": "^17.1.1",
-		"tsx": "^4.19.1"
+		"tsx": "^4.19.1",
+		"typescript": "^5.5.4"
 	},
 	"exports": {
 		"./*": "./util/*"
